# ApertureRendererV3

./: CMakeLists.txt  README.md  main.cu
Imgui/: CMakeLists.txt
core/: GUI.hpp  camera.cu  camera.hpp  config.cuh  platform.h  random.cuh  scene.cu  scene.hpp  tonemap.cuh  vector.cuh
core/bvh/: bvh.cuh
core/denoise/: denoise.cuh  denoise_statistic.cuh  t_quantile.cu  t_quantile.cuh
core/guiding/: guiding.cuh  guiding_bin.cuh  guiding_debug.cuh  octahedron.cuh
core/helper/: measure.cuh  scene_helper.h
core/nee/: nee.cuh
core/object/: aabb.cuh  sphere.cuh
core/object/sdf/: sdf_base.cu  sdf_base.cuh  sdf_cache_manager.cu  sdf_cache_manager.cuh  sdf_diamond.cuh  sdf_master.cu  sdf_master.cuh  sdf_torus.cuh  sdf_volume.cuh
core/render/: brdf.cuh  color.cuh  intersection.cuh  material.cuh  object.cuh  render.cuh  sample.cuh
core/spectrum/: ciexyz.cuh  sample_ciexyz.cuh  spectrum.cuh  spectrum_basis.cuh  spectrum_lut.cuh
core/tensor/: tensor.cuh
pytorch/spectrum/: config.ini  spectrum_dataset.bat  spectrum_dataset.py  spectrum_sample.py  train_spectrum.bat  train_spectrum.py  train_spectrum_old.py  train_spectrum_old2.py  train_spectrum_old3.py
pytorch/spectrum/results/: best.pth
pytorch/spectrum/results/Mallett2019 kernel4 best/checkpoints/: 100000.pth  200000.pth  300000.pth  400000.pth  500000.pth  600000.pth  700000.pth  best.pth  best.txt
pytorch/spectrum/results/kernel4 best/checkpoints/: 100000.pth  1000000.pth  1100000.pth  1200000.pth  1300000.pth  1400000.pth  200000.pth  300000.pth  400000.pth  500000.pth  600000.pth  700000.pth  800000.pth  900000.pth  best.pth  best.txt
pytorch/spectrum/results/kernel4 new best/checkpoints/: 100000.pth  200000.pth  300000.pth  400000.pth  500000.pth  600000.pth  700000.pth  800000.pth  900000.pth  best.pth  best.txt  final.pth
pytorch/spectrum/results/kernel4/checkpoints/: 100000.pth  200000.pth  300000.pth  400000.pth  500000.pth  600000.pth  700000.pth  800000.pth  900000.pth  best.pth  best.txt
pytorch/spectrum/results/kernel8/checkpoints/: 100000.pth  200000.pth  best.pth  best.txt
